--- a/text.html
+++ b/text.html
@@ -18,21 +18,21 @@
 				<img src="img/sun.jpeg" width="350" height="400">
 			</section>
 			<section>
-				<p>'햇살'이라는 이름을 가진 분홍색 꽃이다. '햇살'은 해에서 나오는 줄기 또는 그 기운을 뜻히는 순우리말 단어이다.  </p>
+				<p>'햇살'이라는 이름을 가진 분홍색 꽃이다. '햇살'은 해에서 나오는 줄기 또는 그 기운을 뜻히는 순우리말 단어이다. 꽃에 어째서 햇살이라는 이름이 붙여진 것인지 궁금해졌다. </p>
 			</section>
 			<section>
 				<h2>아기자기</h2>
 				<img src="img/a.jpeg" width="400" height="300">
 			</section>
 			<section>
-				<p>천막에 '아기자기'라고 쓰여있다. '아기자기'는 여러 가지가 오밀조밀 어울려 예쁜 모양을 뜻하는 순우리말 단어이다.</p>
+				<p>천막에 '아기자기'라고 쓰여있다. '아기자기'는 여러 가지가 오밀조밀 어울려 예쁜 모양을 뜻하는 순우리말 단어이다. 물건을 파는 곳에 아기자기라는 간찬이 있으니 귀여운 물건들을 팔 것이라는 생각이 든다.</p>
 			</section>
 			<section>
 				<h2>골드</h2>
 				<img src="img/gold.jpeg" width="400" height="300">
 			</section>
 			<section>
-				<p>'진로골드'라는 단어가 적혀힜다. '골드'는 '금'이라는 뜻의 영어 단어를 왜래어 표기법으로 적은 것이다.</p>
+				<p>'진로골드'라는 단어가 적혀힜다. '골드'는 '금'이라는 뜻의 영어 단어를 왜래어 표기법으로 적은 것이다. 어떤 특징을 보고 골드라는 이름을 붙인 것인지 궁금하다.</p>
 			</section>
 			<section>
 				<h2>육회</h2>
@@ -46,7 +46,7 @@
 				<img src="img/go.jpeg" width="400" height="250">
 			</section>
 			<section>
-				<p>천막에 '튀어'라는 글자가 있다, '튀다'는 탄력 있는 물체가 솟아오른다는 뜻의 순우리말이다.</p>
+				<p>천막에 '튀어'라는 글자가 있다, '튀다'는 탄력 있는 물체가 솟아오른다는 뜻의 순우리말이다. 여러 의미를 포함하는 단어를 사용해 궁금증을 유발한다.</p>
 			</section>
 			<section>
 				<h2>이치고신간</h2>
@@ -81,7 +81,7 @@
 				<img src="img/mild.jpeg" width="400" height="300">
 			</section>
 			<section>
-				<p>유리창에 'mild'라고 쓰여있다. 'mild'는 영어 단어로 '가벼운, 순한'이라는 뜻이다.</p>
+				<p>유리창에 'mild'라고 쓰여있다. 'mild'는 영어 단어로 '가벼운, 순한'이라는 뜻이다. 어째서 영어로 표기한 것인지 궁금하다.</p>
 			</section>
 			<a href="index.html"><p>돌아가기</p></a>
 		</article>
